Bug 54718 - Some basic opcodes are ignored
Summary: Some basic opcodes are ignored
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
4.0.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Noel Power
URL:
Whiteboard: target:3.7.0
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-10 09:28 UTC by Noel Power
Modified: 2012-09-11 10:19 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
test document (9.96 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-09-10 09:58 UTC, Noel Power
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Noel Power 2012-09-10 09:28:01 UTC

    
Comment 1 Noel Power 2012-09-10 09:30:08 UTC
at least I see with VBA mode Basic the Set statement produces a runtime error. This is not exclusively a BASIC ( in vba mode ) problem but I found it while trying a vba test document and it is easy to reproduce that way
Comment 2 Noel Power 2012-09-10 09:58:43 UTC
Created attachment 66914 [details]
test document

open the document, press the button, you should get a message saying ok, what you will get is an Error message saying something about some internal error 51 or something.
Comment 3 Not Assigned 2012-09-10 10:17:00 UTC
Noel Power committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=986a0f4eabae324091434c2670bb9592fadc1536

fdo#54718 fix opcode detection in basic resulting in failed/unregcognized code



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.