fdo#54718 fix opcode detection in basic resulting in failed/unregcognized code

fix is followup to bf5b493104d2dd4ab964f1fcb845200eaefbbcd5 which didn't adjust the runtime to
cater for the new enum layout

Change-Id: I6613fb8aacd8a70947c4fff556fb3e2d33c1113e